--- a/clusters/moo-cluster/metallb/infrastructure.yaml
+++ b/clusters/moo-cluster/metallb/infrastructure.yaml
@@ -26,14 +26,14 @@ metadata:
 spec:
   dependsOn:
     - name: metallb
-  interval: 1m
+  interval: 10m
   retryInterval: 10m
   timeout: 9m0s
   sourceRef:
     kind: GitRepository
     name: flux-system
   path: ./infrastructure/metallb-instances/moo-cluster
-  prune: false
+  prune: true
   validation: client
   healthChecks:
     - apiVersion: apps/v1
