some more prime numbers

--- a/infrastructure/local-path-provisioner/infrastructure.yaml
+++ b/infrastructure/local-path-provisioner/infrastructure.yaml
@@ -4,7 +4,7 @@ metadata:
   name: persistence
   namespace: flux-system
 spec:
-  interval: 11h14m21s
+  interval: 43m
   suspend: false
   sourceRef:
     kind: GitRepository
