--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -50,8 +50,8 @@ spec:
               enabled: true
               #existingClaim: jenkins-precreated
             controller:
-              image: kingdonb/jenkins # {"$imagepolicy": "flux-system:jenkins:image"}
-              tag: lts-5e87b83f-1630687511 # {"$imagepolicy": "flux-system:jenkins:tag"}
+              # image: kingdonb/jenkins # {"$imagepolicy": "flux-system:jenkins:image"}
+              # tag: lts-5e87b83f-1630687511 # {"$imagepolicy": "flux-system:jenkins:tag"}
               installPlugins: false
               #installPlugins:
               #  - kubernetes
