Revert 98b65d1a - this won't be possible
This reverts commit 98b65d1a024eb7950fd8acabfbd0f201df465147.

We will do the automation in the "apps" directory as it was originally
planned.

--- a/apps/jenkins/apps-jenkins-automation.yaml
+++ b/apps/jenkins/apps-jenkins-automation.yaml
@@ -21,6 +21,6 @@ spec:
     kind: GitRepository
     name: flux-system-rw
   update:
-    path: ./clusters/moo-cluster/jenkins
+    path: ./apps/jenkins
     strategy: Setters
 
