--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -52,7 +52,7 @@ spec:
             controller:
               # image: kingdonb/jenkins # {"$imagepolicy": "flux-system:jenkins:image"}
               # tag: lts-5e87b83f-1630687511 # {"$imagepolicy": "flux-system:jenkins:tag"}
-              installPlugins: false
+              #installPlugins: false
               #installPlugins:
               #  - kubernetes
               #  - workflow-aggregator
