Revert "try one more thing before giving up"
This reverts commit cc3459bd92e06a29658ae9cf279d2ca173f481fb.
This reverts commit 3e20f69ac8e4c7b42528377733e0ba522cde4dc9.
This reverts commit 7ec5f967d9fe68314e4d6eff3d421b4f59306f56.
This reverts commit 6687782fd5d400c46fd93c02601435db5cb262b1.

(this is giving up!)

--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 53m
   retryInterval: 10m
-  #suspend: true
+ #suspend: true
   path: ./apps/jenkins
   prune: false
   sourceRef:
@@ -50,6 +50,8 @@ spec:
               enabled: true
               #existingClaim: jenkins-precreated
             controller:
+              # image: kingdonb/jenkins # {"$imagepolicy": "flux-system:jenkins:image"}
+              # tag: lts-5e87b83f-1630687511 # {"$imagepolicy": "flux-system:jenkins:tag"}
               #installPlugins: false
               #installPlugins:
               #  - kubernetes
@@ -63,7 +65,3 @@ spec:
               #  - job-dsl
               #  - strict-crumb-issuer
               # find additional configuration at: ../../../apps/jenkins/helmrelease.yaml
-  images:
-    - name: jenkins
-      newName: kingdonb/jenkins # {"$imagepolicy": "flux-system:jenkins:image"}
-      newTag: lts-5e87b83f-1633713280 # {"$imagepolicy": "flux-system:jenkins:tag"}
