--- a/clusters/moo-cluster/flux-system/kustomization.yaml
+++ b/clusters/moo-cluster/flux-system/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
 - gotk-sync.yaml
 patchesStrategicMerge:
 # - gotk-patches.yaml
-images:
-- name: ghcr.io/fluxcd/kustomize-controller
-  newName: ghcr.io/fluxcd/kustomize-controller
-  newTag: v0.14.1
+#images:
+#- name: ghcr.io/fluxcd/kustomize-controller
+#  newName: ghcr.io/fluxcd/kustomize-controller
+#  newTag: v0.14.1
