--- a/infrastructure/linkerd/cluster.yaml
+++ b/infrastructure/linkerd/cluster.yaml
@@ -1,16 +1,17 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: linkerd
   namespace: flux-system
 spec:
-  interval: 30m29s
+  interval: 11h10m30s
+  retryInterval: 10m0s
   path: ./gitops/flux/runtime/source/linkerd
   prune: true
+  wait: true
   sourceRef:
     kind: GitRepository
     name: linkerd-demos
-  validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
@@ -41,13 +42,13 @@ metadata:
 spec:
   dependsOn:
   - name: linkerd
-  interval: 31m29s
+  interval: 11h15m30s
+  retryInterval: 10m0s
   path: ./gitops/flux/runtime/source/linkerd-viz
   prune: true
   sourceRef:
     kind: GitRepository
     name: linkerd-demos
-  validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
@@ -82,13 +83,13 @@ metadata:
 spec:
   dependsOn:
   - name: linkerd-viz
-  interval: 33m29s
+  interval: 11h20m30s
+  retryInterval: 10m0s
   path: ./gitops/flux/runtime/source/ambassador
   prune: true
   sourceRef:
     kind: GitRepository
     name: linkerd-demos
-  validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
@@ -103,7 +104,7 @@ spec:
       name: ambassador-edge-stack-agent
       namespace: ambassador
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: flagger
@@ -111,13 +112,18 @@ metadata:
 spec:
   dependsOn:
   - name: linkerd-viz
-  interval: 30m59s
+  interval: 11h25m30s
+  retryInterval: 10m0s
   path: ./gitops/flux/runtime/source/flagger
   prune: true
+  wait: true
   sourceRef:
     kind: GitRepository
     name: linkerd-demos
-  validation: client
+  postBuild:
+    substituteFrom:
+      - kind: Secret
+        name: slack-url
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
