--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -65,6 +65,19 @@ spec:
       JCasC:
         defaultConfig: false
         configScripts:
+          kingdon-podinfo-app: |
+            jobs:
+              - script: >
+                  multibranchPipelineJob('kingdon-podinfo') {
+                    branchSources {
+                      github {
+                        id('kingdon-podinfo-github')
+                        scanCredentialsId('9c4638e0-4ed9-48c6-b0e1-38550d345448')
+                        repoOwner('kingdonb')
+                        repository('podinfo')
+                      }
+                    }
+                  }
           kingdon-ci-org-folder: |
             jobs:
               - script: >
