--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -77,6 +77,19 @@ spec:
                         scanCredentialsId('9c4638e0-4ed9-48c6-b0e1-38550d345448')
                         repoOwner('kingdonb')
                         repository('podinfo')
+                        traits {
+                          gitHubTagDiscovery()
+                          gitHubBranchDiscovery {
+                            strategyId(1)
+                          }
+                          pruneStaleBranchTrait()
+                        }
+                      }
+                      configure {
+                        def traits = it / navigators / 'org.jenkinsci.plugins.github__branch__source.GitHubSCMNavigator' / traits
+                        traits << 'org.jenkinsci.plugins.github__branch__source.OriginPullRequestDiscoveryTrait' {
+                          strategyId 1
+                        }
                       }
                     }
                   }
