this field is required according to jenkins error

--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -79,6 +79,7 @@ spec:
                             credentialsId('9c4638e0-4ed9-48c6-b0e1-38550d345448')
                             repoOwner('kingdonb')
                             repository('podinfo')
+                            repositoryUrl('https://github.com/kingdonb/podinfo')
                             traits {
                               gitHubTagDiscovery()
                               gitHubBranchDiscovery {
