repositoryUrl is for reference only now

--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -80,6 +80,7 @@ spec:
                             repoOwner('kingdonb')
                             repository('podinfo')
                             repositoryUrl('https://github.com/kingdonb/podinfo')
+                            configuredByUrl(false)
                             traits {
                               gitHubTagDiscovery()
                               gitHubBranchDiscovery {
