Repro: to trigger the validation issue
helm template -n ingress-nginx --create-namespace ingress-nginx ingress-nginx/ingress-nginx \
	--output-dir=. --set controller.metrics.enabled=true \
	--set controller.metrics.serviceMonitor.enabled=true

--- a/infrastructure/ingress-nginx-testing/controller-deployment.yaml
+++ b/infrastructure/ingress-nginx-testing/controller-deployment.yaml
@@ -93,6 +93,9 @@ spec:
             - name: https
               containerPort: 443
               protocol: TCP
+            - name: metrics
+              containerPort: 10254
+              protocol: TCP
             - name: webhook
               containerPort: 8443
               protocol: TCP
