--- a/clusters/moo-cluster/podinfo/kustomization.yaml
+++ b/clusters/moo-cluster/podinfo/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-#- flux-kustomization.yaml   # provided via infra/linkerd/linkerd-demos/gitops/flux/apps/
+- flux-kustomization.yaml
 - namespace.yaml
+- namespace-dev.yaml
