--- a/apps/podinfo/kustomization.yaml
+++ b/apps/podinfo/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: podinfo-dev
 bases:
   - github.com/kingdonb/podinfo//kustomize
   - apps-podinfo-automation.yaml
