--- a/clusters/moo-cluster/podinfo/flux-kustomization.yaml
+++ b/clusters/moo-cluster/podinfo/flux-kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: podinfo
+  name: podinfo-dev
   namespace: flux-system
 spec:
   interval: 47h59m28s
