create these things in flux-system
so they can get access to the flux-system gitrepo

--- a/clusters/moo-cluster/podinfo/kustomization.yaml
+++ b/clusters/moo-cluster/podinfo/kustomization.yaml
@@ -4,3 +4,6 @@ resources:
 - flux-kustomization.yaml
 - namespace.yaml
 - namespace-dev.yaml
+- apps-podinfo-automation.yaml
+- podinfo-policy.yaml
+- kingdonb-podinfo-registry.yaml
