--- a/clusters/moo-cluster/podinfo/podinfo-policy.yaml
+++ b/clusters/moo-cluster/podinfo/podinfo-policy.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   imageRepositoryRef:
-    name: stefanprodan-podinfo
+    name: kingdonb-podinfo
   policy:
     semver:
       range: ^6.0.0
