there is no error when
If you refer in your kyaml setter to a policy resource that does not
exist, you will not get any error because no ImageUpdateAutomation will
see it (the setters are only activated when IUA reaches through Policy)

--- a/clusters/moo-cluster/podinfo/kustomization.yaml
+++ b/clusters/moo-cluster/podinfo/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
 - namespace.yaml
 - namespace-dev.yaml
 - apps-podinfo-automation.yaml
+- podinfo-dev-policy.yaml
 - podinfo-policy.yaml
 - kingdonb-podinfo-registry.yaml
