--- a/apps/podinfo/patch.yaml
+++ b/apps/podinfo/patch.yaml
@@ -2,5 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: podinfo
-  labels:
-    version: 6.0.1 # {"$imagepolicy": "flux-system:podinfo-dev:tag"}
+spec:
+  template:
+    spec:
+      containers:
+        - name: podinfod
+          image: 6.0.1 # {"$imagepolicy": "flux-system:podinfo-dev"}
