--- a/clusters/moo-cluster/podinfo/podinfo-dev-policy.yaml
+++ b/clusters/moo-cluster/podinfo/podinfo-dev-policy.yaml
@@ -7,7 +7,9 @@ metadata:
 spec:
   imageRepositoryRef:
     name: kingdonb-podinfo
+  filterTags:
+    pattern: '^master-[a-f0-9]+-(?P<ts>[0-9]+)$'
+    extract: '$ts'
   policy:
-    semver:
-      range: ^6.0.0
-
+    numerical:
+      order: asc
