(fixup) this would probably fail validation

--- a/infrastructure/linkerd/cluster.yaml
+++ b/infrastructure/linkerd/cluster.yaml
@@ -135,8 +135,8 @@ spec:
     - name: linkerd-viz
     - name: ambassador
   prune: true
+  wait: true
   sourceRef:
     kind: GitRepository
     name: gitops
   validation: client
-  healthChecks:
