--- a/apps/podinfo/kustomization.yaml
+++ b/apps/podinfo/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 namespace: podinfo-dev
 bases:
   - github.com/kingdonb/podinfo//kustomize
+  - mappings.yaml
 patchesStrategicMerge:
   - patch.yaml
