add a new webhook for docker hub kingdonb/podinfo

--- a/infrastructure/flux-system-extras/kustomization.yaml
+++ b/infrastructure/flux-system-extras/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
 - git-webhook-receiver.yaml
 - linkerd-demos-git-webhook-receiver.yaml
 - image-webhook-receiver.yaml
+- podinfo-image-webhook-receiver.yaml
 - on-call-webapp-alert.yaml
