add read-write for linkerd-demos so can automate

--- a/clusters/moo-cluster/podinfo/kustomization.yaml
+++ b/clusters/moo-cluster/podinfo/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
 - podinfo-dev-policy.yaml
 - podinfo-policy.yaml
 - kingdonb-podinfo-registry.yaml
+- linkerd-demos-podinfo-automation.yaml
