don't forget to install instance of metallb

--- a/infrastructure/metallb/kustomization.yaml
+++ b/infrastructure/metallb/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
   - github.com/metallb/metallb-operator//config/default?ref=v0.10.2
   - github.com/metallb/metallb-operator//config/metallb_rbac?ref=v0.10.2
   - moo-cluster/moo-cluster-address-pool.yaml
+  - metallb-system.yaml
 namespace: metallb-system
