Revert "the linkerd-demos repo has rw enabled"
This reverts commit cf6c20bb0a891f93597c4bbdf22b04832b9ecaf3.

(The problem was not a mismatch of names, the problem was I forgot to
move the "secrets" branch forward after writing a new secret into main)

--- a/infrastructure/linkerd/repo.yaml
+++ b/infrastructure/linkerd/repo.yaml
@@ -10,4 +10,4 @@ spec:
     branch: main
   url: ssh://git@github.com/kingdonb/linkerd-demos
   secretRef:
-    name: linkerd-demos-rw
+    name: linkerd-demos
