--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: jenkins
-      version: '^3.5.12'
+      version: '3.7.0'
       sourceRef:
         kind: HelmRepository
         name: jenkinsci
