do not reconcile so frequently
I think github is ratelimiting us (or our own network might implode)

--- a/clusters/moo-cluster/metallb/infrastructure.yaml
+++ b/clusters/moo-cluster/metallb/infrastructure.yaml
@@ -4,7 +4,7 @@ metadata:
   name: metallb
   namespace: flux-system
 spec:
-  interval: 1m
+  interval: 10h30m
   retryInterval: 10m
   timeout: 2m
   sourceRef:
