helmrelease depends on ingress (in a way)
The missing webhooks will prevent the helmrelease from completely
reconciling, since the ingresses will not be ready with their admission
webhooks

--- a/apps/hephy/helmrelease-deis-hephy.yaml
+++ b/apps/hephy/helmrelease-deis-hephy.yaml
@@ -18,6 +18,11 @@ spec:
   storageNamespace: deis
   targetNamespace: deis
   timeout: 10m0s
+  dependsOn:
+  - namespace: ingress-nginx
+    name: internal-ingress
+  - namespace: ingress-nginx
+    name: public-ingress
   postRenderers:
     - kustomize:
         patchesStrategicMerge:
