--- a/infrastructure/metrics-server/kustomization.yaml
+++ b/infrastructure/metrics-server/kustomization.yaml
@@ -1,7 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - https://github.com/kubernetes-sigs/metrics-server/releases/download/v0.5.0/components.yaml
+- v0.5.1/components.yaml
+#- https://github.com/kubernetes-sigs/metrics-server/releases/download/v0.5.0/components.yaml
+# The remote reference can fail occasionally, better to have a copy
 patchesStrategicMerge:
 - |-
   apiVersion: apps/v1
