increase interval of metrics-server kustomization
and add `spec.timeout`

--- a/clusters/moo-cluster/metrics-server/infrastructure.yaml
+++ b/clusters/moo-cluster/metrics-server/infrastructure.yaml
@@ -4,8 +4,9 @@ metadata:
   name: metrics-server
   namespace: flux-system
 spec:
-  interval: 1m
+  interval: 90m
   retryInterval: 10m
+  timeout: 5m
   sourceRef:
     kind: GitRepository
     name: flux-system
