2m0s is not enough time for kube-oidc-proxy
and we don't really want it to have spec.interval of 1m0s

--- a/infrastructure/kube-oidc-proxy/helmrelease.yaml
+++ b/infrastructure/kube-oidc-proxy/helmrelease.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 36h45m10s
+  timeout: 4m0s
   releaseName: kube-oidc-proxy
   targetNamespace: kube-oidc-proxy
   storageNamespace: kube-oidc-proxy
