--- a/apps/hephy/helmrelease-deis-hephy.yaml
+++ b/apps/hephy/helmrelease-deis-hephy.yaml
@@ -53,6 +53,12 @@ spec:
                   - name: deis-hephy
                     persistentVolumeClaim:
                       claimName: deis-hephy
+          - kind: Ingress
+            apiVersion: networking.k8s.io/v1
+            metadata:
+              name: controller-api-server-ingress-http
+            spec:
+              ingressClassName: internal
   values:
     controller:
       platform_domain: deis.hephy.pro
