--- a/apps/hephy/helmrelease-deis-hephy.yaml
+++ b/apps/hephy/helmrelease-deis-hephy.yaml
@@ -54,11 +54,14 @@ spec:
                     persistentVolumeClaim:
                       claimName: deis-hephy
           - kind: Ingress
-            apiVersion: networking.k8s.io/v1
+            #apiVersion: networking.k8s.io/v1
+            apiVersion: extensions/v1beta1
             metadata:
               name: controller-api-server-ingress-http
-            spec:
-              ingressClassName: internal
+              annotations:
+                kubernetes.io/ingress.class: internal
+            # spec:
+            #   ingressClassName: internal
   values:
     controller:
       platform_domain: deis.hephy.pro
