for some reason other resources render without ns
but this one includes it in the template render output, so we should
include it too (or else the patch will not match the resource!)

--- a/apps/hephy/helmrelease-deis-hephy.yaml
+++ b/apps/hephy/helmrelease-deis-hephy.yaml
@@ -54,10 +54,10 @@ spec:
                     persistentVolumeClaim:
                       claimName: deis-hephy
           - kind: Ingress
-            #apiVersion: networking.k8s.io/v1
             apiVersion: extensions/v1beta1
             metadata:
               name: controller-api-server-ingress-http
+              namespace: deis
               annotations:
                 kubernetes.io/ingress.class: internal
             # spec:
