--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -47,8 +47,10 @@ spec:
                   metadata:
                     name: jenkins
                     namespace: jenkins
+                    annotations:
+                      something-changed: "the thing"
                   spec:
-                    replicas: 1
+                    replicas: 0
           values:
             persistence:
               enabled: true
