--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -48,7 +48,7 @@ spec:
                     name: jenkins
                     namespace: jenkins
                     annotations:
-                      something-changed: "the thing"
+                      something-changed: "the new thing"
                   spec:
                     replicas: 0
           values:
