do it in same file

--- a/clusters/moo-cluster/flux-system-extras/policy2.yaml
+++ b/clusters/moo-cluster/flux-system-extras/policy2.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   imageRepositoryRef:
     name: www-image
+  filterTags:
+    pattern: '^master-(?P<ts>[0-9]+)'
+    extract: '$ts'
   policy:
-    semver:
-      range: ^1.0
+    numerical:
+      order: asc
