--- a/clusters/moo-cluster/flux-system-extras/policy2.yaml
+++ b/clusters/moo-cluster/flux-system-extras/policy2.yaml
@@ -6,9 +6,6 @@ metadata:
 spec:
   imageRepositoryRef:
     name: www-image
-  filterTags:
-    pattern: '^master-(?P<ts>[0-9]+)'
-    extract: '$ts'
   policy:
-    numerical:
-      order: asc
+    semver:
+      range: ^1.0
