more identical to max's example

--- a/apps/secret-generator-test/kustomization.yaml
+++ b/apps/secret-generator-test/kustomization.yaml
@@ -4,3 +4,5 @@ secretGenerator:
     files:
     - .dockerconfigjson=config.json
     type: kubernetes.io/dockerconfigjson
+generatorOptions:
+  disableNameSuffixHash: true
