do not have jenkins-scale kustomization suspended

--- a/clusters/moo-cluster/jenkins/jenkins-scale-flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/jenkins-scale-flux-kustomization.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 22h15m
   retryInterval: 10m
   timeout: 9m0s
-  suspend: true
+  suspend: false
   path: ./apps/jenkins-scale
   prune: false
   wait: true
