label the node for dockerbuilder ruby
We only have one worker node, but some jobs have affinity or selector
that is meant to be used to decide "which node" can run, to avoid the
necessity of pushing and pulling an image between pipeline steps so the
next step can run on a node where the same image has already been built

--- a/apps/jenkins/kustomization.yaml
+++ b/apps/jenkins/kustomization.yaml
@@ -14,5 +14,8 @@ resources:
 ## Flux read-write GitRepo for image automation
 - flux-system-rw-gitrepo.yaml
 
+## Builder node label for ruby
+- node-msigaming-label-patch.yaml
+
 ## Jenkins charts gitrepo for chart debugging
 # - jenkins-charts-gitrepo.yaml
