let's test commit verification
Signed-off-by: Kingdon Barrett <kingdon@weave.works>

--- a/clusters/moo-cluster/flux-system/gotk-patches.yaml
+++ b/clusters/moo-cluster/flux-system/gotk-patches.yaml
@@ -9,3 +9,7 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
+  verify:
+    mode: head
+    secretRef:
+      name: pgp-public-keys
