--- a/clusters/moo-cluster/flux-system/gotk-patches.yaml
+++ b/clusters/moo-cluster/flux-system/gotk-patches.yaml
@@ -9,6 +9,13 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: GitRepository
+metadata:
+  name: flux-system
+  namespace: flux-system
+spec:
   verify:
     mode: head
     secretRef:
