--- a/clusters/moo-cluster/flux-system/gotk-patches.yaml
+++ b/clusters/moo-cluster/flux-system/gotk-patches.yaml
@@ -1,14 +1,14 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
-kind: Kustomization
-metadata:
-  name: flux-system
-  namespace: flux-system
-spec:
-  prune: false
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-gpg
+#apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+#kind: Kustomization
+#metadata:
+#  name: flux-system
+#  namespace: flux-system
+#spec:
+#  prune: false
+#  decryption:
+#    provider: sops
+#    secretRef:
+#      name: sops-gpg
 ---
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
