--- a/clusters/moo-cluster/flux-system/kustomization.yaml
+++ b/clusters/moo-cluster/flux-system/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 - gotk-components.yaml
 - gotk-sync.yaml
 patchesStrategicMerge:
-# - gotk-patches.yaml
+- gotk-patches.yaml
 #images:
 #- name: ghcr.io/fluxcd/kustomize-controller
 #  newName: ghcr.io/fluxcd/kustomize-controller
