--- a/clusters/moo-cluster/flux-system/kustomization.yaml
+++ b/clusters/moo-cluster/flux-system/kustomization.yaml
@@ -5,7 +5,10 @@ resources:
 - gotk-sync.yaml
 patchesStrategicMerge:
 - gotk-patches.yaml
-#images:
+images:
+- name: ghcr.io/fluxcd/source-controller
+  newName: docker.io/kingdonb/source-controller
+  newTag: fix-commit-verification-1797b3c3
 #- name: ghcr.io/fluxcd/kustomize-controller
 #  newName: ghcr.io/fluxcd/kustomize-controller
 #  newTag: v0.14.1
